Added a header for recipe name

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -5,4 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spaghetti sauce with ground beef</title>
     </head>
+
+    <body>
+        <h1>Spaghetti Sauce with Ground Beef</h1>
+    </body>
 </html>
