--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/spaghetti.html">Spaghetti with Ground Beef </a>
+        <ul>
+            <li><a href="recipes/spaghetti.html" target="_blank" rel="noopener noreffer">Spaghetti with Ground Beef</a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        
     </body>
 </html>
