Add link to apple-strudel.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/spaghetti.html" target="_blank" rel="noopener noreffer">Spaghetti with Ground Beef</a></li>
-            <li></li>
+            <li><a href="recipes/spaghetti.html" target="_self" rel="noopener noreffer">Spaghetti with Ground Beef</a></li>
+            <li><a href="recipes/apple-strudel.html" target="_self" rel="noopener noreffer">Apple Strudel</a></li>
             <li></li>
             <li></li>
         </ul>
