--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         <ul>
             <li><a href="recipes/spaghetti.html" target="_self" rel="noopener noreffer">Spaghetti with Ground Beef</a></li>
             <li><a href="recipes/apple-strudel.html" target="_self" rel="noopener noreffer">Apple Strudel</a></li>
-            <li></li>
-            <li></li>
+            <li><a href="recipes/salmon.html" target="_self" rel="noopener noreffer">Pistachio-Crusted Salmon</a></li>
         </ul>
-        
     </body>
 </html>
